kind/k8s/deployment-bookmark-frontend-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookmark-frontend-service
  labels:
    app: bookmark-frontend-service
    version: latest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookmark-frontend-service
  template:
    metadata:
      labels:
        app: bookmark-frontend-service
    spec:
      containers:
      - image: pblgllgs/bookmark-frontend-service:latest
        name: bookmark-frontend-service
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  selector:
    app: bookmark-frontend-service
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
    nodePort: 32001
