kind/k8s/deployment-bookmark-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookmark-service
  labels:
    app: bookmark-service
    version: latest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookmark-service
  template:
    metadata:
      labels:
        app: bookmark-service
    spec:
      containers:
      - image: pblgllgs/bookmark-service:latest
        name: bookmark-service
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: NodePort
  selector:
    app: bookmark-service
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
    nodePort: 32002
