kind/k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: postgres
    version: latest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
      containers:
        - image: postgres:14-alpine3.18
          name: postgres
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgres/data
          ports:
            - name: postgres
              containerPort: 5432
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
kind: Service
apiVersion: v1
metadata:
  name: postgres
spec:
  selector:
    app:  postgres
  type:  ClusterIP
  ports:
  - name: http
    port:  5432
    targetPort:  5432
