kind/k8s/ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /bookmark-backend-service(/|$)(.*)
            backend:
              service:
                name: bookmark-backend-service
                port:
                  number: 8080
