kind/k8s/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  rules:
  - host: k8s-cluster.com
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: bookmark-frontend-service
              port:
                number: 3000
